P5Elearning/force-app/main/default/objects/trail_user_history__c/trail_user_history__c.object-meta.xml
<CustomObject>
    <label>trail_user_history</label>
    <nameField>
        <label>trail-user-history Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>trails_users_historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>