P5Elearning/force-app/main/default/objects/trail_user_history__c/fields/StatusQuestion__c.field-meta.xml
<CustomField>
    <fullName>StatusQuestion__c</fullName>
    <label>StatusQuestion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>