P5Elearning/force-app/main/default/objects/trail_user_history__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>trails_users_historys</relationshipLabel>
    <relationshipName>trails_users_historys</relationshipName>
    <type>Lookup</type>
</CustomField>