P5Elearning/force-app/main/default/objects/trail_user_history__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>trails_users_historys</relationshipName>
    <type>Lookup</type>
</CustomField>